<resources>
    <string name="app_name">Stonks</string>

    <!-- Stocks page strings -->
    <string name="stats_title">Stats</string>
    <string name="open_label">Open</string>
    <string name="volume_label">Volume</string>
    <string name="high_today_label">High today</string>
    <string name="low_today_label">Low today</string>
    <string name="yearly_high_label">52 wk high</string>
    <string name="pe_ratio_label">P/E ratio</string>
    <string name="yearly_low_label">52 wk. low</string>
    <string name="div_yield_label">Div/Yield</string>
    <string name="trade_button_label">Trade</string>
    <string name="sym_placeholder">SYM</string>
    <string name="company_name_placeholder">Company Name</string>
    <string name="num_shares">Number of shares: </string>
    <string name="about_title">About</string>
    <string name="na_value">–</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="position_title">Position</string>
    <string name="shares_label">Shares</string>
    <string name="market_value_label">Market value</string>
    <string name="avg_cost_label">Average cost</string>
    <string name="today_return_label">Today\'s return</string>
    <string name="total_return_label">Total return</string>
    <string name="intent_extra_symbol">symbol</string>
    <string name="your_history_title">Your history</string>
    <string name="buy_label">Buy</string>
    <string name="sell_label">Sell</string>
    <string name="try_it_out_label">Try it out</string>
    <string name="change_indicator">Change Indicator</string>
    <string name="day">1D</string>
    <string name="week">1W</string>
    <string name="month">1M</string>
    <string name="year">1Y</string>
    <string name="three_years">3Y</string>
    <string name="configure_indicators">Configure Indicators</string>

    <!-- Buy/Sell fragment strings -->
    <string name="buy_button_label">Buy</string>
    <string name="sell_button_label">Sell</string>
    <string name="price_label">Price per share</string>
    <string name="estimated_cost_label">Estimated cost</string>
    <string name="estimated_value_label">Estimated value</string>
    <string name="available_to_trade_label">Available to trade</string>
    <string name="available_to_sell_label">Available to sell</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="small_dollar_placeholder">$12.20</string>
    <string name="zero_dollar_placeholder">$0.00</string>
    <string name="big_dollar_placeholder">$10,103.20</string>
    <string name="buy_successful">Stocks successfully purchased</string>
    <string name="buy_unsuccessful">Stock purchase failed, try again</string>
    <string name="sell_successful">Stocks successfully sold</string>
    <string name="sell_unsuccessful">Stocks could not be sold, try again</string>
    <string name="insufficient_funds">Insufficient balance</string>
    <string name="insufficent_stocks">Not enough stocks to sell</string>

    <!-- Home Page Strings -->
    <string name="title_activity_home_page">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="account_value">Account Value</string>
    <string name="current_value_price">$00.00</string>
    <string name="price_update">$00.00 (0.00\% from yesterday)</string>
    <string name="total_return">$00.00 since Jan 01 2021</string>
    <string name="money_left_desc">left to trade</string>
    <string name="money_left">$00.00</string>
    <string name="your_portfolio">Your Portfolio</string>
    <string name="no_stocks_msg">No stocks right now.\nTrying buying some!</string>

    <!-- Activity Screen -->
    <string name="activity">Activity</string>
    <string name="your_activity">Your Activity</string>
    <string name="recent_transactions">Recent Transactions</string>

    <!-- Settings Screen-->
    <string name="account_info">Account Information</string>
    <string name="portfolio_settings">Portfolio Settings</string>
    <string name="update_username">Update username</string>
    <string name="username_settings">Username</string>
    <string name="settings_username">Username</string>
    <string name="change_password">Change password</string>
    <string name="use_bio">Sign-in using biometrics</string>
    <string name="training_settings">Training Settings</string>
    <string name="amount_to_trade">Amount to start trading with</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="arrow">></string>
    <string name="sample_email">sample@sample.com</string>
    <string name="submit">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_training_period">Reset training period</string>
    <string name="username_updated">Username successfully updated</string>
    <string name="password_updated">Password successfully updated</string>
    <string name="invalid_current_password">Invalid password</string>
    <string name="username_update_failed">Username update failed, please try again!</string>
    <string name="password_update_error">Password update failed, please try again!</string>
    <string name="biometrics_in_use">Biometrics already in use by another user.</string>
    <string name="training_period_error">Training amount could not be changed</string>
    <string name="training_period_updated">Training amount successfully updated</string>
    <string name="invalid_training_input">Training amount can only include numbers</string>



    <!-- Search page strings -->
    <string name="search_hint">Search companies…</string>

    <!-- Menu strings -->
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="activity_menu">Activity</string>
    <string name="favourites_menu">Favourites</string>
    <string name="settings_menu">Settings</string>

    <!-- Login Activity strings -->
    <string name="welcome">Welcome</string>
    <string name="login_failed">Login Failed</string>
    <string name="signup_failed">Sign Up Failed</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_password_format">Password should be at least 6 characters long</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="user_exists">User already exists</string>
    <string name="try_again">Please try again!</string>
    <string name="no_biometrics">Biometrics not set up</string>
    <string name="login_incomplete">Please enter both username and password</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="sign_in_button_label">Sign in</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="login_incorrect_error">Invalid username/password</string>
    <string name="login_biometrics">Login via Biometrics</string>

    <!-- Hypothetical Page Strings -->
    <string name="price_on_label">Price on</string>
    <string name="sample_date">03-15-2021, 5:00PM EST</string>
    <string name="sample_time">3:21PM</string>
    <string name="as_of_label">as of today at</string>

    <!-- Filters page strings -->
    <string name="filters">Filters</string>
    <string name="reset_all">Reset all</string>
    <string name="transaction_type">Transaction type</string>
    <string name="all">All</string>
    <string name="market_buy">Market Buy</string>
    <string name="market_sell">Market Sell</string>
    <string name="transaction_amount">Total transaction amount</string>
    <string name="reset">Reset</string>
    <string name="min">Minimum value</string>
    <string name="max">Maximum value</string>
    <string name="companies">Company name</string>
    <string name="apply_filters">Apply filters</string>

    <!-- Favourites Page strings -->
    <string name="saved">Saved</string>
    <string name="your_saved">Your saved stocks</string>
    <string name="no_saved_message">No saved stock pages yet.\nTry hitting the heart icon in a stocks page.</string>
</resources>
