<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/home_nav"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_menu"
    />
    <item
            android:id="@+id/search_nav"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search_menu"
    />
    <item
            android:id="@+id/activity_nav"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/activity_menu"
    />
    <item
            android:id="@+id/settings_nav"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings_menu"
    />
</menu>
