<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/date_range_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingEnd="@dimen/date_range_padding"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/range_day"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day"
            android:theme="@style/AppTheme.Button.ButtonGroupButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/range_week"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week"
            android:theme="@style/AppTheme.Button.ButtonGroupButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/range_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month"
            android:theme="@style/AppTheme.Button.ButtonGroupButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/range_year"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year"
            android:theme="@style/AppTheme.Button.ButtonGroupButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/range_all"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all"
            android:theme="@style/AppTheme.Button.ButtonGroupButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ImageView
        android:id="@+id/fav_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:src="@drawable/ic_baseline_graphic_eq_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>