<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/page_padding_horizontal"
    android:paddingVertical="@dimen/page_padding_vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/section_margin"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_mode_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_button_label"
            android:theme="@style/AppTheme.Button.ButtonGroupButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_mode_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up_button_label"
            android:theme="@style/AppTheme.Button.ButtonGroupButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="@dimen/section_margin_small"
        app:layout_constraintTop_toBottomOf="@id/toggle_button">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="30dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        android:layout_marginTop="@dimen/section_margin_small">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/auth_failed_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextAppearance.SmallErrorLabel"
        android:layout_margin="@dimen/section_margin"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        android:visibility="gone"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button.PrimaryButton"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_failed_error_message"
        android:layout_marginTop="@dimen/text_margin" />

    <Button
        android:id="@+id/biometrics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button.PrimaryButton"
        android:text="@string/login_biometrics"
        android:drawableLeft="@drawable/ic_baseline_lock_open_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:layout_marginTop="@dimen/text_margin" />

    <TextView
        android:id="@+id/username_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextAppearance.SmallErrorLabel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/password_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextAppearance.SmallErrorLabel"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
