<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stock_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sym_placeholder"
            style="@style/AppTheme.TextAppearance.LargeLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_placeholder"
            style="@style/AppTheme.TextAppearance.MediumLabel"
            app:layout_constraintTop_toBottomOf="@id/stock_symbol"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_value_price"
            style="@style/AppTheme.TextAppearance.LargeLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/change_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_value_price"
            style="@style/AppTheme.TextAppearance.MediumLabel"
            app:layout_constraintTop_toBottomOf="@id/current_price"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/colorPrimary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
